--- a/modules/APP_MODULES_EXAM_LOCAL_VN.json
+++ b/modules/APP_MODULES_EXAM_LOCAL_VN.json
@@ -1,1 +1,1 @@
-{"adtech":["core"],"vne":["news","banner","index","newsfrontend","contact","contactfrontend"]}
+{"adtech":["core"],"vne":["news","banner","index","newsfrontend","contact","contactfrontend","member"]}
