--- a/.env
+++ b/.env
@@ -36,3 +36,9 @@ JWT_SECRET=9Sy1SvibXrFIUDxnUPS2vSGnFIu1uazy
 APP_MODULES_NHVV_VNEDUTECH_VN=adtech.core
 APP_MODULES_DHCD_VNEDUTECH_VN=adtech.core
 APP_MODULES_EXAM_LOCAL_VN=vne.news,banner,index,newsfrontend,contact,contactfrontend
+
+FILESYSTEM_CLOUD=google
+GOOGLE_DRIVE_CLIENT_ID=601326911611-5thp2nqm7c2qalj7s56qtdg2lv55g6r4.apps.googleusercontent.com
+GOOGLE_DRIVE_CLIENT_SECRET=TayNxw678GHGthNghhOxACi4
+GOOGLE_DRIVE_REFRESH_TOKEN=1/nzjrEN6sUTQhXF83JtieAT9b2TMFvgulDvM6FKdZK_zbYoJ8Gdt5RrMvdUjuZ0tW
+GOOGLE_DRIVE_FOLDER_ID=1eZRsS8cTjQvOFSkhQJKR7usWupMa3Ra0
