--- a/.env
+++ b/.env
@@ -38,7 +38,8 @@ APP_MODULES_DHCD_VNEDUTECH_VN=adtech.core
 APP_MODULES_EXAM_LOCAL_VN=vne.news,banner,index,newsfrontend,contact,contactfrontend
 
 FILESYSTEM_CLOUD=google
-GOOGLE_DRIVE_CLIENT_ID=601326911611-5thp2nqm7c2qalj7s56qtdg2lv55g6r4.apps.googleusercontent.com
-GOOGLE_DRIVE_CLIENT_SECRET=TayNxw678GHGthNghhOxACi4
-GOOGLE_DRIVE_REFRESH_TOKEN=1/nzjrEN6sUTQhXF83JtieAT9b2TMFvgulDvM6FKdZK_zbYoJ8Gdt5RrMvdUjuZ0tW
+GOOGLE_DRIVE_CLIENT_ID=601326911611-cnrjmu8qfqf8btnh0buuji0fsjj50frm.apps.googleusercontent.com
+GOOGLE_DRIVE_CLIENT_SECRET=hMja-m8Tat8wrws5ttAyg8Bx
+GOOGLE_DRIVE_REFRESH_TOKEN=1/EC1NHMZoHDipISL7wR0jBYYi6e5DwElLEZKK32HwN_4 
+GOOGLE_DRIVE_ACCESS_TOKEN=ya29.GltLBiEFBJ30En-wno_8KpKkw0UHOyugcyCdZ6KaYvbzmR6Kd3MuwczaY-8U2I1f-tgCBU26j2WVUjCQ-a94skwgOzW-eIPcjoOwyjqxno0pxXy3qvws4ZAAxWCo
 GOOGLE_DRIVE_FOLDER_ID=1eZRsS8cTjQvOFSkhQJKR7usWupMa3Ra0
